# python-kebab-2023

./: Makefile  README.md  models_pydantic.py  pyproject.toml
src/: _common.py  models_msgspec.py  models_pydantic.py
tests/: test_msgspec.py  test_pydantic.py
